Cleaning TempDir and trying stuff

--- a/TempDir/CMakeLists.txt
+++ b/TempDir/CMakeLists.txt
@@ -16,6 +16,5 @@ IF(STD11CHECK)
 ENDIF()
 
 
-ADD_SUBDIRECTORY( vtl )
-ADD_SUBDIRECTORY( exe/fdtd_mpi )
-ADD_SUBDIRECTORY(mumps)
+ADD_SUBDIRECTORY(vtl)
+ADD_SUBDIRECTORY(Solver)
